--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pre-commit": "npm run format && npm run lint:fix && npm run type-check"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
